--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="/Users/meganlong/Documents/My Code/UX_UI_HW_17/css/style.css"
+<link rel="stylesheet" href="css/style.css"
 <head>
 <link rel="preconnect" href="https://fonts.gstatic.com"> 
 <link href="https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap" rel="stylesheet">
@@ -8,7 +8,7 @@
 </head>
 <body><header class='nav'>
         <div class="inline-block logo">
-            <img src="/Users/meganlong/Documents/My Code/UX_UI_HW_17/images/Logo.png" alt="ML Logo">
+            <img src="images/Logo.png" alt="ML Logo">
          </div>   
         <nav class="inline-block">
             <ul class="inline-block nav">
@@ -28,13 +28,13 @@
             <button class="button"><a href="#resume"></a class="buttontext">Resume</button>      
         </div>
         <div class="flexItem3">
-            <img class=logo src="/Users/meganlong/Documents/My Code/UX_UI_HW_17/images/Personal Photo.png" alt="Personal Photo">
+            <img class=logo src="images/Personal Photo.png" alt="Personal Photo">
         </div>
     </section>
             
     <section class="alignItems flexContainer">
         <div class="flexItem1">
-            <img src="/Users/meganlong/Documents/My Code/UX_UI_HW_17/images/MEP.png" alt="MEP Logo">
+            <img src="images/MEP.png" alt="MEP Logo">
         </div>
         <div class="flexItem2">
             <h1>Minnesota Environmental Partnership</h1>
@@ -49,18 +49,19 @@
             <p><a href="#readmore"></a>Read More</p>        
         </div>
         <div class="flexItem1">
-            <img src="/Users/meganlong/Documents/My Code/UX_UI_HW_17/images/SheCanic.png" alt="SheCanic Logo">
+            <img src="images/SheCanic.png" alt="SheCanic Logo">
         </div>
     </section>
     <section class="alignItems flexContainer">
         <div class="flexItem1">
-            <img src="/Users/meganlong/Documents/My Code/UX_UI_HW_17/images/TrekorMeet.png" alt="Trek or Meet Logo">
+            <img src="images/TrekorMeet.png" alt="Trek or Meet Logo">
         </div>
         <div class="flexItem2">
             <h1>Trek or Meet</h1>
             <p>Researched, prototyped, tested, and validated an idea for a 
                 brand-new mobile travel application.</p>
-            <p><a href="#readmore"></a>Read More</p>    </div>
+            <p><a href="#readmore"></a>Read More</p>    
+        </div>
     </section>
         <h1>Skills</h1>
         <div id="row" class="flex">
